@@ -120,13 +120,21 @@ public class ScenarioService {
 
   @Transactional
   public Scenario createScenario(@NotNull final Scenario scenario) {
+    computeEmails(scenario);
+    this.grantService.computeGrant(scenario);
+    this.actionMetricCollector.addScenarioCreatedCount();
+    return this.scenarioRepository.save(scenario);
+  }
+
+  public void computeEmails(@NotNull Scenario scenario) {
     if (!hasText(scenario.getFrom())) {
       if (this.imapEnabled) {
         scenario.setFrom(this.imapUsername);
-        scenario.setReplyTos(List.of(this.imapUsername));
+        scenario.setReplyTos(new ArrayList<>(Arrays.asList(this.imapUsername)));
       } else {
         scenario.setFrom(this.openBASConfig.getDefaultMailer());
-        scenario.setReplyTos(List.of(this.openBASConfig.getDefaultReplyTo()));
+        scenario.setReplyTos(
+            new ArrayList<>(Arrays.asList(this.openBASConfig.getDefaultReplyTo())));
       }
     }
     this.actionMetricCollector.addScenarioCreatedCount();
